--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-apollo": "^1.4.8",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-jsonschema-form": "^0.49.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
     "react-tap-event-plugin": "^2.0.1"
