--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "immutability-helper": "^2.3.0",
     "material-ui": "^0.18.7",
     "react": "^15.6.1",
     "react-apollo": "^1.4.8",
