--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "immutability-helper": "^2.3.0",
-    "material-ui": "^0.18.7",
     "react": "^15.6.1",
     "react-apollo": "^1.4.8",
     "react-bootstrap": "^0.31.1",
@@ -13,7 +12,7 @@
     "react-jsonschema-form": "^0.49.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-table": "^6.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
