--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "bootswatch": "^3.3.7",
     "immutability-helper": "^2.3.0",
     "react": "^15.6.1",
     "react-apollo": "^1.4.8",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-jsonschema-form": "^0.49.0",
+    "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
     "react-table": "^6.5.1"
