--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
-    "react-table": "^6.5.1"
+    "react-table": "^6.5.1",
+    "victory": "^0.21.3"
   },
   "scripts": {
     "start": "react-scripts start",
